--- a/branchesdb.cbp
+++ b/branchesdb.cbp
@@ -13,7 +13,6 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="release">
@@ -30,16 +29,31 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-Wshadow" />
+			<Add option="-Winit-self" />
+			<Add option="-Wredundant-decls" />
+			<Add option="-Wcast-align" />
+			<Add option="-Wundef" />
+			<Add option="-Wfloat-equal" />
+			<Add option="-Winline" />
+			<Add option="-Wunreachable-code" />
+			<Add option="-Wmissing-declarations" />
+			<Add option="-Wmissing-include-dirs" />
+			<Add option="-Wswitch-enum" />
+			<Add option="-Wswitch-default" />
 			<Add option="-Weffc++" />
 			<Add option="-Wmain" />
 			<Add option="-Wall" />
-			<Add option="-fexceptions" />
 			<Add option="-std=c++11" />
-			<Add option="-v" />
+			<Add directory="include" />
 		</Compiler>
-		<Unit filename="include/test.h" />
+		<Unit filename="include/util/error.h" />
+		<Unit filename="include/util/id.h" />
+		<Unit filename="include/util/random.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="src/test.cpp" />
+		<Unit filename="src/util/error.cpp" />
+		<Unit filename="src/util/id.cpp" />
+		<Unit filename="src/util/random.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
