--- a/branchesdb.cbp
+++ b/branchesdb.cbp
@@ -50,6 +50,9 @@
 			<Add option="-std=c++11" />
 			<Add directory="include" />
 		</Compiler>
+		<Linker>
+			<Add option="-rdynamic" />
+		</Linker>
 		<Unit filename="include/util/error.h" />
 		<Unit filename="include/util/id.h" />
 		<Unit filename="include/util/random.h" />
