--- a/branchesdb.cbp
+++ b/branchesdb.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-rdynamic" />
+				</Linker>
 			</Target>
 			<Target title="release">
 				<Option output="bin/release/branchesdb" prefix_auto="1" extension_auto="1" />
@@ -21,10 +24,12 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-march=core2" />
+					<Add option="-fexpensive-optimizations" />
+					<Add option="-O3" />
 				</Compiler>
 				<Linker>
-					<Add option="-s" />
+					<Add option="-rdynamic" />
 				</Linker>
 			</Target>
 		</Build>
@@ -51,7 +56,6 @@
 			<Add directory="include" />
 		</Compiler>
 		<Linker>
-			<Add option="-rdynamic" />
 			<Add library="dl" />
 		</Linker>
 		<Unit filename="include/util/error.h" />
